# deploy-of-machine-learning-model

./: README.md
@lib/notebooks/: 02-machine-learning-pipeline-feature-engineering.ipynb  03-machine-learning-pipeline-feature-selection.ipynb  04-machine-learning-pipeline-model-training.ipynb  05-machine-learning-pipeline-model-training.ipynb  06-machine-learning-oop.ipynb
@lib/notebooks/models/: linear_regression.joblib
section-05-production-model-package/: pyproject.toml
section-05-production-model-package/regression_model/: __init__.py  config.yml  pipeline.py  predict.py  train_pipeline.py
section-05-production-model-package/regression_model/config/: core.py
section-05-production-model-package/regression_model/processing/: data_manager.py  features.py  validation.py
section-05-production-model-package/regression_model/trained_models/: regression_model_output_v0.0.1.pkl
src/notebooks/: 04-machine-learning-pipeline-model-training.ipynb
