[project]
name = "regression_model"  # Changed to match your package name
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "feature-engine>=1.8.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pydantic>=2.9.2",
    "ruamel-yaml>=0.18.6",
    "scikit-learn>=1.5.2",
    "strictyaml>=1.7.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

#[tool.setuptools.packages.find]
#include = ["regression_model*"]  # This tells setuptools where to find your package

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.7.2",
]
